Update Murcia city overview and UCAM environment sections

--- a/zh-tw/basic.html
+++ b/zh-tw/basic.html
@@ -23,10 +23,11 @@
 
         <section>
             <h2>Murcia 城市概況</h2>
-            <p>Murcia 是西班牙第七大城市，氣候乾燥溫暖。這裡的生活成本相對於馬德里或巴塞隆納低廉許多，非常適合交換生居住。</p>
+            <p>Murcia 是西班牙第七大城市，氣候乾燥溫暖。生活成本相對於馬德里或巴塞隆納低廉許多，但娛樂較少，課外活動範圍除了市中心(Plaza Circular)外就是大型購物中心(Nueva Condomina)</p>
             
             <h2>UCAM 大學環境</h2>
-            <p>UCAM (Universidad Católica San Antonio de Murcia) 以體育強項聞名。主校區位於洛斯赫羅尼莫斯修道院 (Los Jerónimos Monastery)，建築非常有歷史特色。</p>
+            <p>UCAM (Universidad Católica San Antonio de Murcia) 以體育強項聞名。主校區位於洛斯赫羅尼莫斯修道院 (Los Jerónimos Monastery)，需搭乘公車或輕軌抵達，距離市區約30-60分鐘路程（大眾運輸）
+                英語授課有心理、商業、外語。</p>
         </section>
 
         <footer>
